--- a/onos-mininet-SDN-1/roles/common/templates/hosts.conf.j2
+++ b/onos-mininet-SDN-1/roles/common/templates/hosts.conf.j2
@@ -1,5 +1,5 @@
 127.0.0.1       localhost
-192.168.45.11   gateway01    gateway01
+192.168.45.11   onos01    onos01
 
 # The following lines are desirable for IPv6 capable hosts
 ::1     localhost ip6-localhost ip6-loopback
