longname dns fix

--- a/docker-box-ubuntu/roles/common/templates/hosts.conf.j2
+++ b/docker-box-ubuntu/roles/common/templates/hosts.conf.j2
@@ -1,5 +1,5 @@
 127.0.0.1       localhost
-192.168.45.41   control01       control01
+192.168.45.41   control02.local       control02
 
 
 # The following lines are desirable for IPv6 capable hosts
