--- a/passwordless_ssh_ansible/provisioning/common/templates/hosts.conf.j2
+++ b/passwordless_ssh_ansible/provisioning/common/templates/hosts.conf.j2
@@ -1,6 +1,7 @@
 127.0.0.1       localhost
-192.168.45.10 apache01.local  apache01
-192.168.45.11 apache02.local  apache02
+192.168.18.9 etcd1.local  etcd1
+192.168.18.10 etcd2.local  etcd2
+192.168.18.11 etcd3.local  etcd3
 
 # The following lines are desirable for IPv6 capable hosts
 ::1     localhost ip6-localhost ip6-loopback
